  with respect to closing.
  (Xavier Leroy, report by Jacques-Henri Jourdan, review by Guillaume
   Munch-Maccagnoni, Gabriel Scherer, Jacques-Henri Jourdan)

- #10139: Remove confusing navigation bar from stdlib documentation.
  Removes the 'Up', 'Previous' and 'Next' links from the top of each standard
  library module's documentation.
  (John Whitington, review by David Allsopp)

### Compiler user-interface and warnings:

- #9960: extend ocamlc/ocamlopt's -o option to work when compiling C files
  (Sébastien Hinderer, reported by Daniel Bünzli, review by Florian
  Angeletti and Gabriel Scherer)

- #10095: simplify the syntax error messages produced by the compiler.
  In many cases, the compiler would produce an error message that looked
  potentially helpful but was actually misguided and arguably confusing,
  because the error message implicitly referred to an earlier point in
  the source code than the point explicitly shown in the error message.
  (François Pottier, review by Gabriel Scherer and Frédéric Bour.)

- #10196, #10197: better error message on empty character literals ''.
  (Gabriel Scherer, review by David Allsopp and Florian Angeletti
   and Daniel Bünzli, report by Robin Björklin)

### Internal/compiler-libs changes:

- #9243, simplify parser rules for array indexing operations
  (Florian Angeletti, review by Damien Doligez and Gabriel Scherer)

- #9650, #9651: keep refactoring the pattern-matching compiler
  (Gabriel Scherer, review by Thomas Refis and Florian Angeletti)

- #9994: Make Types.type_expr a private type, and abstract marking mechanism
  (Jacques Garrigue and Takafumi Saikawa,
   review by Gabriel Scherer and Leo White)

- #10007: Driver.compile_common: when typing a .ml file, return the
  compilation unit signature (inferred or from the .cmi) in addition
  to the implementation and the coercion.
  (Leandro Ostera, review by Gabriel Scherer and Thomas Refis)

* #10061, #10078: remove library `ocamlopttoplevel`, remove modules